--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@
   outline-color: black;
   outline-style: solid;
   float: left;
-  height: 500px;
+  height: 400px;
   width: 90%;
 }
 
@@ -39,13 +39,18 @@
 
 .comment-container {
   display: inline-block;
-  float: right;
-  width: 30%;
-  padding: 10px;
+  float: left;
+  text-align: left;
+  font-size: 12px;
+  width: 36%;
+  padding: 20px;
+  margin: 5px;
+  background-color: #f7f7f7;
+  height: 400px;
 }
 
 .comment-username {
-  font-size: 10px;
+  font-size: 8px;
 }
 
 #vid-container {
