--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,37 +22,46 @@
   font-size: large;
 }
 
-.video {
-  margin: 20px;
-  outline-color: black;
-  outline-style: solid;
-  float: left;
-  height: 400px;
-  width: 90%;
-  min-width: 1150px;
+.vid-display {
+  background-color: #429fc1;
 }
 
 .video-player {
   display: inline-block;
   width: 400px;
-  float: left;
+  height: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .comment-container {
   display: inline-block;
-  float: left;
-  text-align: left;
+  float: auto;
+  text-align: auto;
   font-size: 12px;
   width: 36%;
   padding: 20px;
   margin: 5px;
-  background-color: #f7f7f7;
+  background-color: #d7f7ff;
   height: 400px;
   overflow: scroll;
 }
 
+.comment {
+  background-color: white;
+  border-radius:50px;
+  padding: 5px;
+  margin: 10px;
+}
+
 .comment-username {
-  font-size: 8px;
+  font-size: 12px;
+}
+
+.comment-text {
+  
+  font-size: 18px;
 }
 
 #vid-container {
@@ -60,5 +69,9 @@
 }
 
 .delete-button {
-  margin-right: 300px;
+  margin: 30px auto;
+  /*margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  margin-top: 50px;*/
 }
