--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,8 +89,10 @@
   display: block;
   width: 15%;
   margin: 10px;
+  padding: 15px;
+  height: 500px;
   float: none;
-  background-color: #f7f7f7;
+  background-color: #effbff;
 }
 
 .navbar {
