--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,31 +23,46 @@
 }
 
 .vid-display {
-  background-color: #e0ffff;
+  background-color: #990000;
+  width: 100%;
+  height: 1000px;
+  padding: 1% 0 0 0;
 }
 
 .video-player {
-  display: inline-block;
-  width: 400px;
+  /*display: inline-block;*/
+  width: 50%;
   height: 400px;
-  display: block;
+  /*display: block;*/
   margin-left: auto;
   margin-right: auto;
   border-radius: 35px;
+  float: left;
+}
+
+
+
+.comment-container, .vid-details {
+  /*display: inline-block;*/
+  /*float: auto;*/
+  text-align: auto;
+  font-size: 12px;
+  padding: 10px;
+  margin: 0 1% 0 1%;
+  background-color: #d7f7ff;
+  border-radius: 15px;
+  /*height: 400px;*/
 }
 
 .comment-container {
-  display: inline-block;
-  float: auto;
-  text-align: auto;
-  font-size: 12px;
-  width: 50%;
-  padding: 20px;
-  margin: 5px;
-  background-color: #d7f7ff;
-  border-radius: 15px;
-  height: 400px;
+  float: right;
+  width: 23%;
   overflow: scroll;
+}
+
+.vid-details {
+  float:left;
+  width: 23%;
 }
 
 .comment {
